# dactyl-manuform-kb2040-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
src/: fmt.rs  layout.rs  leds.rs  main.rs  matrix.rs  ws2812.rs
