[package]
authors = ["Paul Daniel Faria"]
edition = "2021"
readme = "README.md"
name = "dactyl-manuform-kb2040-rs"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.0.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"

defmt-rtt = "0.3.1"
panic-halt = "0.2.0"

usb-device= "0.2.8"
usbd-serial = { version = "0.1.1", optional = true }
usbd-hid = "0.5.0"

# Led support
smart-leds = "0.3.0"
# This revision supports rp2040 version 0.4.0
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "b126e70c23e192896caa38aa1a54d4877745fb1f", optional = true }
nb = { version = "1.0.0", optional = true }
pio = "0.1.0"
ufmt = "0.1.0"

# This revision supports boot2 by default
adafruit-kb2040 = { git = "https://github.com/rp-rs/rp-hal", rev = "c180e7867b9463793c993a05e792c8ffb690d870", optional = true } # "0.1.0"
rp-pico = { git = "https://github.com/rp-rs/rp-hal", rev = "c180e7867b9463793c993a05e792c8ffb690d870", optional = true } # "0.1.0"

# This revision supports hold tap
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "58ac73cfcd09659bf31ee405ff9f5e23b0edc527" } # "0.1.1"

[features]
default = ["pico"]
kb2040 = ["adafruit-kb2040", "ws2812-pio", "nb"]
pico = ["rp-pico"]
serial-comms = ["usbd-serial"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "c180e7867b9463793c993a05e792c8ffb690d870" }